ADD  pagination amounts in budget book detail
