# src/api-generator/api-docs-stingify.yaml
@@ -705,14 +705,39 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AmountDTO'
-  /amounts/budget-book/{budgetBookId}:
+  /amounts/budget-book/:
     get:
       tags:
       - amounts-controller
       operationId: getAmountsByBudgetBookId
       parameters:
+      - name: page
+        in: query
+        description: Zero-based page index (0..N)
+        required: false
+        schema:
+          minimum: 0
+          type: integer
+          default: 0
+      - name: size
+        in: query
+        description: The size of the page to be returned
+        required: false
+        schema:
+          minimum: 1
+          type: integer
+          default: 20
+      - name: sort
+        in: query
+        description: "Sorting criteria in the format: property(,asc|desc). Default\
+          \ sort order is ascending. Multiple sort criteria are supported."
+        required: false
+        schema:
+          type: array
+          items:
+            type: string
       - name: budgetBookId
-        in: path
+        in: query
         required: true
         schema:
           type: integer
@@ -723,9 +748,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/AmountDTO'
+                $ref: '#/components/schemas/PageAmountDTO'
   /amount-types/{id}:
     get:
       tags:
@@ -952,12 +975,12 @@ components:
         numberOfElements:
           type: integer
           format: int32
-        pageable:
-          $ref: '#/components/schemas/PageableObject'
         first:
           type: boolean
         last:
           type: boolean
+        pageable:
+          $ref: '#/components/schemas/PageableObject'
         empty:
           type: boolean
     PageableObject:
@@ -966,6 +989,10 @@ components:
         offset:
           type: integer
           format: int64
+        paged:
+          type: boolean
+        unpaged:
+          type: boolean
         sort:
           $ref: '#/components/schemas/Sort'
         pageNumber:
@@ -974,16 +1001,44 @@ components:
         pageSize:
           type: integer
           format: int32
-        unpaged:
-          type: boolean
-        paged:
-          type: boolean
     Sort:
       type: object
       properties:
+        unsorted:
+          type: boolean
         empty:
           type: boolean
         sorted:
           type: boolean
-        unsorted:
+    PageAmountDTO:
+      type: object
+      properties:
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
+          format: int32
+        size:
+          type: integer
+          format: int32
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/AmountDTO'
+        number:
+          type: integer
+          format: int32
+        sort:
+          $ref: '#/components/schemas/Sort'
+        numberOfElements:
+          type: integer
+          format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
+        pageable:
+          $ref: '#/components/schemas/PageableObject'
+        empty:
           type: boolean
